# Paddle

./: CMakeLists.txt
cmake/: third_party.cmake
paddle/fluid/: CMakeLists.txt
paddle/fluid/compiler/: CMakeLists.txt
paddle/fluid/compiler/piano/: CMakeLists.txt  layout.cc  layout.h  layout_test.cc  shape.cc  shape.h  shape_test.cc
paddle/fluid/compiler/piano/backends/: CMakeLists.txt  note_visitor_base.h  schedule_wrapper.h
paddle/fluid/compiler/piano/backends/llvm_ir/: CMakeLists.txt  gpu_ir_emitter.cc  gpu_ir_emitter.h  gpu_primitive_ir_emitter.cc  gpu_primitive_ir_emitter.h  ir_emitter.cc  ir_emitter.h  llvm_utils.h  nvptx_ir_emitter.cc  nvptx_ir_emitter.h  nvptx_ir_emitter_test.cc  nvptx_primitive_ir_emitter.cc  nvptx_primitive_ir_emitter.h  nvptx_primitive_ir_emitter_test.cc  primitive_ir_emitter.cc  primitive_ir_emitter.h  primitive_ir_generator.h
paddle/fluid/compiler/piano/note/: CMakeLists.txt  function.cc  function.h  instruction.cc  instruction.h  note.proto  note_ir_test.cc  opcode.cc  opcode.h  opcode_test.cc  type_traits.h
paddle/fluid/compiler/scripts/: piano_ci_test.sh
paddle/scripts/: paddle_build.sh
python/paddle/fluid/tests/unittests/: test_cond.py  test_cond_pe.py
python/paddle/fluid/tests/unittests/dygraph_to_static/: test_tensor_shape.py
tools/dockerfile/: Dockerfile.ubuntu
